<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/dimen_16"
        android:background="@drawable/round_corner_background"
        android:padding="@dimen/dimen_16"
        >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20"
            android:letterSpacing="0"
            android:textSize="@dimen/title_small_font_size"
            android:textStyle="normal"
            android:text="@string/warning"
            android:textColor="@color/title_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20"
            android:letterSpacing="0"
             android:textColor="@color/des_color"
            android:textSize="16sp"
            android:textStyle="normal"
            android:text="@string/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/purple_500"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/btn_ok"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_description" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ok"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textColor="@color/purple_500"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_cancel"
            app:layout_constraintTop_toBottomOf="@id/tv_description" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/round_corner_background"
         android:minWidth="@dimen/dimen_250"
         android:orientation="vertical"
         android:padding="@dimen/dimen_20">


     </LinearLayout>-->
</layout>